--- a/pom.xml
+++ b/pom.xml
@@ -89,16 +89,17 @@
               <goal>shade</goal>
             </goals>
             <configuration>
-              <finalName>duplicatesFinder</finalName>
+              <finalName>csvReaderTest2</finalName>
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>ru.job4j.io.duplicates.DuplicatesFinder</mainClass>
+                  <mainClass>ru.job4j.io.CSVReader</mainClass>
                 </transformer>
               </transformers>
             </configuration>
           </execution>
         </executions>
       </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
@@ -120,6 +121,7 @@
           </execution>
         </executions>
       </plugin>
+
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
