--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.3.3</version>
+    </dependency>
   </dependencies>
 
   <build>
