--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,3 +1,8 @@
-url=jdbc:postgresql://localhost:5432/idea_db
-login=postgres
-password=password
+#url=jdbc:postgresql://localhost:5432/idea_db
+#login=postgres
+#password=password
+
+jdbc.url=jdbc:postgresql://localhost:5432/spammer
+jdbc.driver=org.postgresql.Driver
+jdbc.username=postgres
+jdbc.password=password
