--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,18 @@
       <artifactId>postgresql</artifactId>
       <version>42.3.3</version>
     </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>RELEASE</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.23.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
